--- a/ASPcore/Views/Home/Index.cshtml
+++ b/ASPcore/Views/Home/Index.cshtml
@@ -3,48 +3,43 @@
 
     ViewData["Title"] = "Pagina de inicio";
 }
-    <h1 class="display-4; text-center">Welcome</h1>
+    <h1 class="display-4; text-center">Biblioteca</h1>
 <div class="text-center; align-items-center">
     
-    <table  cellpadding="8" cellspacing="8" border="3" align="center">
+    <table cellpadding="8" cellspacing="8" border="0" align="center">
         <tr>
-            <td colspan="4" align="center" bgcolor="666666"><font color="#FFFFFF"><strong>Registros</strong></font></td>
+            <td colspan="4" align="center" bgcolor="666666"><font color="#FFFFFF"><strong>Registros Del Alumno</strong></font></td>
         </tr>
         <tr bgcolor="EFEFEF">
-            <td>Numero de control: @Model.NC </td>
-            <td>Numero de control: @Model.NC2 </td>
-            <td>Numero de control: @Model.NC3 </td>
+            <td><b>Numero de control:</b> <u>@Model.NC</u> </td>
+            <td><b>Numero de control:</b> <u>@Model.NC2</u> </td>
+            <td><b>Numero de control:</b> <u>@Model.NC3</u> </td>
         </tr>
         <tr bgcolor="EFEFEF">
-            <td>NOMBRE: @Model.Nombre</td>
-            <td>NOMBRE: @Model.Nombre2</td>
-            <td>NOMBRE: @Model.Nombre3</td>
+            <td><b>Nombre:</b> <u>@Model.Nombre</u></td>
+            <td><b>Nombre:</b> <u>@Model.Nombre2</u></td>
+            <td><b>Nombre:</b> <u>@Model.Nombre3</u></td>
         </tr>
         <tr bgcolor="EFEFEF">
-            <td>App: @Model.App</td>
-            <td>App: @Model.App2</td>
-            <td>App: @Model.App3</td>
+            <td><b>Apellido Paterno:</b> <u>@Model.App</u></td>
+            <td><b>Apellido Paterno:</b> <u>@Model.App2</u></td>
+            <td><b>Apellido Paterno:</b> <u>@Model.App3</u></td>
 
         </tr>
         <tr bgcolor="EFEFEF">
-            <td>Apm: @Model.Apm</td>
-            <td>Apm: @Model.Apm2</td>
-            <td>Apm: @Model.Apm3</td>
+            <td><b>Apellido Materno:</b> <u>@Model.Apm</u></td>
+            <td><b>Apellido Materno:</b> <u>@Model.Apm2</u></td>
+            <td><b>Apellido Materno:</b> <u>@Model.Apm3</u></td>
         </tr>
         <tr bgcolor="EFEFEF">
-            <td>Carrera: @Model.Carrera</td>
-            <td>Carrera: @Model.Carrera2</td>
-            <td>Carrera: @Model.Carrera3</td>
+            <td><b>Carrera:</b> <u>@Model.Carrera</u></td>
+            <td><b>Carrera:</b> <u>@Model.Carrera2</u></td>
+            <td><b>Carrera:</b> <u>@Model.Carrera3</u></td>
         </tr>
         <tr bgcolor="EFEFEF">
-            <td>Fecha de ingreso: @Model.FechaIngreso</td>
-            <td>Fecha de ingreso: @Model.FechaIngreso</td>
-            <td>Fecha de ingreso: @Model.FechaIngreso</td>
-        </tr>
-        <tr bgcolor="EFEFEF">
-            <td>Promdeio: @Model.Promedio</td>
-            <td>Promdeio: @Model.Promedio2</td>
-            <td>Promdeio: @Model.Promedio3</td>
+            <td><b>Semestre:</b> <u>@Model.Semestre</u></td>
+            <td><b>Semestre:</b> <u>@Model.Semestre2</u></td>
+            <td><b>Semestre:</b> <u>@Model.Semestre3</u></td>
         </tr>
 
     </table>
